--- a/cv.tex
+++ b/cv.tex
@@ -105,73 +105,39 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} \\
 \subsection*{Honors and Awards}
 \begin{itemize}
 \item Division of Particles \& Fields travel grant to the APS April 2013 meeting.
-\item The Robert T. Lagemann Award for highest academic achievement by a first-year graduate student.
+\item The Robert T.~Lagemann Award for highest academic achievement by a first-year graduate student.
 \item ``Topping-up" McMinn Fellowship.
 \end{itemize}
 \subsection*{Employment}
 \begin{itemize}
-\item DOE funded RA with Dr. Weiler at Vanderbilt University, Spring 2011--Present.
+\item DOE funded RA with Weiler at Vanderbilt University, Spring 2011--Present.
 \item TA at Vanderbilt University, Fall 2010--Fall 2012.
-\item RA with Dr. Pantelides at Vanderbilt University, Summer--Fall 2010.
-\item Lee Teng Internship at Fermilab with Dr. Sen, Summer 2009.
+\item RA with Pantelides at Vanderbilt University, Summer--Fall 2010.
+\item Lee Teng Internship at Fermilab with Sen, Summer 2009.
 \item TA for the Physics Department at Rice University, Fall 2009.
-\item Bonner Labs at Rice University with Dr. Llope, Summer 2008.
+\item Bonner Labs at Rice University with Llope, Summer 2008.
 \item Writing consultant at Rice University, 2007--2010.
-% \item Grader for the Computational and Applied Mathematics department at Rice University, 2007--2008.
 \end{itemize}
-\subsection*{Research}
-Dr. Tom Weiler
+\subsection*{Selected Research Topics}
 \begin{itemize}
+\item Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observatory and JEM-EUSO.
+\item Beyond the standard model contribution to integral dispersion integrals for $pp$ scattering at LHC energies.
 \item The possibility of cosmic rays producing black holes in the atmosphere.
-\item Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observator and JEM-EUSO.
-% \item Neutrino mixing and sources.
-\item Beyond the standard model contribution to dispersion integrals for $pp$ scattering at LHC energies.
-\end{itemize}
-Dr. Sokrates Pantelides
-\begin{itemize}
-\item DFT calculations of radiation effects of graphene.
-\end{itemize}
-Dr. Marj Corcoran
-\begin{itemize}
-\item Monte Carlo simulations looking for $CP$ violation in $WW\gamma$ decays.
-\end{itemize}
-Hulet Atom Cooling Group with Dr. Randy Hulet
-\begin{itemize}
-\item Design and construction of improved laser stabilization electronics.
-\end{itemize}
-Fermilab with Dr. Tanaji Sen
-\begin{itemize}
-\item Work on reconstructing the longitudinal phase space in the Main Injector and the Recycler.
-% \item Work on the Vlasov code base.
-\end{itemize}
-Bonner Labs with Dr. Bill Llope
-\begin{itemize}
-\item Testing and designing components for TOF for STAR at BNL.
-\item Confirming the long term accuracy of the calibration of electronics boards.
-\item Testing various improvements of PMT's.
+\item Matching Weinberg's Higgs portal to $N_{\rm{eff}}$ measurements.
+\item Characterizing electroweak bremsstrahlung with effective operators to reduce spin suppression.
 \end{itemize}
 \subsection*{Language Skills}
+\begin{itemize}
+\item 
 \LaTeX, beamer, python, matplotlib, C++, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
+\end{itemize}
 \subsection*{Teaching}
 \begin{itemize}
-\item English, math, and physics at middle school, high school, undergraduate, and graduate school levels.
-% \item Grading and running help sessions for various physics courses.
 \item Teaching assistant for various freshman physics labs.
+\item Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels.
 \end{itemize}
 \section*{Professional Societies}
 \begin{itemize}
 \item Member, American Physical Society
 \end{itemize}
-% \subsection*{Graduate Courses Taken}
-% Mathematical methods, orders of magnitude, classical mechanics, statistical mechanics, advanced electrodynamics I \& II, quantum
-% mechanics I \& II, particle physics, QFT I, GR. To be completed: QFT II, cosmology.
-
-% \vspace*{.1in}
-% Footer
-% \begin{center}
-% \begin{footnotesize}
-% Updated: \today \\
-% \href{\footerlink}{\texttt{\footerlink}}
-% \end{footnotesize}
-% \end{center}
 \end{document}
