--- a/CV.tex
+++ b/CV.tex
@@ -21,7 +21,7 @@
 % \usepackage[sc,osf]{mathpazo}
 
 % Set your name here
-\def\name{Peter Denton}
+\def\name{Peter B.~Denton}
 
 % Replace this with a link to your CV if you like, or set it empty
 % (as in \def\footerlink{}) to remove the link in the footer:
