--- a/CV.tex
+++ b/CV.tex
@@ -136,7 +136,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} \\
 \item Teaching assistant for various freshman physics labs.
 \item Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels.
 \end{itemize}
-\section*{Professional Societies}
+\subsection*{Professional Societies}
 \begin{itemize}
 \item Member, American Physical Society
 \end{itemize}
