--- a/CV.tex
+++ b/CV.tex
@@ -110,12 +110,12 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} \\
 \end{itemize}
 \subsection*{Employment}
 \begin{itemize}
-\item DOE funded RA with Weiler at Vanderbilt University, Spring 2011--Present.
-\item TA at Vanderbilt University, Fall 2010--Fall 2012.
-\item RA with Pantelides at Vanderbilt University, Summer--Fall 2010.
-\item Lee Teng Internship at Fermilab with Sen, Summer 2009.
-\item TA for the Physics Department at Rice University, Fall 2009.
-\item Bonner Labs at Rice University with Llope, Summer 2008.
+\item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011--Present.
+\item Teaching assistant at Vanderbilt University, Fall 2010--Fall 2012.
+\item Research assistant with Pantelides at Vanderbilt University, Summer--Fall 2010.
+\item Lee Teng Internship at Fermilab with Tanaji Sen, Summer 2009.
+\item Teaching assistant for the Physics Department at Rice University, Fall 2009.
+\item Bonner Labs at Rice University with Bill Llope, Summer 2008.
 \item Writing consultant at Rice University, 2007--2010.
 \end{itemize}
 \subsection*{Selected Research Topics}
@@ -133,8 +133,8 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} \\
 \end{itemize}
 \subsection*{Teaching}
 \begin{itemize}
-\item Teaching assistant for various freshman physics labs.
-\item Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels.
+\item Teaching assistant for various freshman physics labs, 2010-Present.
+\item Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels, 2005-Present.
 \end{itemize}
 \subsection*{Professional Societies}
 \begin{itemize}
