--- a/CV.tex
+++ b/CV.tex
@@ -104,9 +104,12 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} \\
 \end{itemize}
 \subsection*{Honors and Awards}
 \begin{itemize}
-\item Division of Particles \& Fields travel grant to the APS April 2013 meeting.
-\item The Robert T.~Lagemann Award for highest academic achievement by a first-year graduate student.
-\item ``Topping-up" McMinn Fellowship.
+\item Vanderbilt Dissertation Enhancement Grant of \$2,000 to attend the Theoretical Advanced Study Institute in
+June 2014, awarded April 2014.
+\item Subsidy of \$1,000 to attend the Theoretical Advanced Study Institute in June 2014, awarded April 2014.
+\item Division of Particles \& Fields travel grant of \$120 to the APS April 2013 meeting awarded March 2013.
+\item The Robert T.~Lagemann Award of \$1,000 for highest academic achievement by a first-year graduate student awarded April 2011.
+\item ``Topping-up" McMinn Fellowship of \$5,000 a year of five years awarded March 2010.
 \end{itemize}
 \subsection*{Employment}
 \begin{itemize}
