--- a/CV.tex
+++ b/CV.tex
@@ -107,15 +107,15 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} \\
 \item Vanderbilt Dissertation Enhancement Grant of \$2,000 to attend the Theoretical Advanced Study Institute in
 June 2014, awarded April 2014.
 \item Subsidy of \$1,000 to attend the Theoretical Advanced Study Institute in June 2014, awarded April 2014.
-\item Division of Particles \& Fields travel grant of \$120 to the APS April 2013 meeting awarded March 2013.
-\item The Robert T.~Lagemann Award of \$1,000 for highest academic achievement by a first-year graduate student awarded April 2011.
-\item ``Topping-up" McMinn Fellowship of \$5,000 a year of five years awarded March 2010.
+\item Division of Particles \& Fields travel grant of \$120 to the APS April 2013 meeting, awarded March 2013.
+\item The Robert T.~Lagemann Award of \$1,000 for highest academic achievement by a first-year graduate student, awarded April 2011.
+\item ``Topping-up" McMinn Fellowship of \$5,000 a year of five years, awarded March 2010.
 \end{itemize}
 \subsection*{Employment}
 \begin{itemize}
 \item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011--Present.
 \item Teaching assistant at Vanderbilt University, Fall 2010--Fall 2012.
-\item Research assistant with Pantelides at Vanderbilt University, Summer--Fall 2010.
+\item Research assistant with Sokrates Pantelides at Vanderbilt University, Summer--Fall 2010.
 \item Lee Teng Internship at Fermilab with Tanaji Sen, Summer 2009.
 \item Teaching assistant for the Physics Department at Rice University, Fall 2009.
 \item Bonner Labs at Rice University with Bill Llope, Summer 2008.
