--- a/CV.tex
+++ b/CV.tex
@@ -1,71 +1,21 @@
-% LaTeX Curriculum Vitae Template
-%
-% Copyright (C) 2004-2009 Jason Blevins <jrblevin@sdf.lonestar.org>
-% http://jblevins.org/projects/cv-template/
-%
-% You may use use this document as a template to create your own CV
-% and you may redistribute the source code freely. No attribution is
-% required in any resulting documents. I do ask that you please leave
-% this notice and the above URL in the source code if you choose to
-% redistribute this file.
-
 \documentclass[letterpaper]{article}
 
+\usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
-\usepackage{geometry}
+\hypersetup{colorlinks=false,pdfborder={0 0 0}}
 
-% Comment the following lines to use the default Computer Modern font
-% instead of the Palatino font provided by the mathpazo package.
-% Remove the 'osf' bit if you don't like the old style figures.
-% \usepackage[T1]{fontenc}
-% \usepackage[sc,osf]{mathpazo}
-
-% Set your name here
 \def\name{Peter B.~Denton}
 
-% Replace this with a link to your CV if you like, or set it empty
-% (as in \def\footerlink{}) to remove the link in the footer:
-% \def\footerlink{http://www.owlnet.rice.edu/\textasciitilde pbd1/}
-\def\footerlink{\null}
-
-% The following metadata will show up in the PDF properties
-\hypersetup{
-colorlinks = true,
-urlcolor = black,
-pdfauthor = {\name},
-pdfkeywords = {physics, mathematics},
-pdftitle = {\name: Curriculum Vitae},
-pdfsubject = {Curriculum Vitae},
-pdfpagemode = UseNone
-}
-
-\geometry{
-body={6.5in, 9.7in},
-left=1.0in,
-top=0.9in
-}
-
-% Customize page headers
 \pagestyle{myheadings}
 \markright{\name}
 \thispagestyle{empty}
 
-% Custom section fonts
 \usepackage{sectsty}
 \sectionfont{\rmfamily\mdseries\Large}
 \subsectionfont{\rmfamily\mdseries\itshape\large}
 
-% Other possible font commands include:
-% \ttfamily for teletype,
-% \sffamily for sans serif,
-% \bfseries for bold,
-% \scshape for small caps,
-% \normalsize, \large, \Large, \LARGE sizes.
-
-% Don't indent paragraphs.
 \setlength\parindent{0em}
 
-% Make lists without bullets
 \renewenvironment{itemize}{
 \begin{list}{}{
 \setlength{\leftmargin}{1.5em}
@@ -76,11 +26,7 @@ top=0.9in
 
 \begin{document}
 
-% Place name at left
 {\huge \name}
-
-% Alternatively, print name centered and bold:
-%\centerline{\huge \bf \name}
 
 \vspace{0.1in}
 
@@ -94,6 +40,7 @@ Phone: & (616) 450-0749\\
 Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} \\
 \end{tabular}
 \end{minipage}
+
 \subsection*{Education}
 \begin{itemize}
 \item Ph.D. Physics, Vanderbilt University (in progress).
@@ -102,6 +49,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} \\
 % \item Introduction to accelerator physics, United States Particle Accelerator School, 2009.
 % \item Multi-variable calculus, differential equations, Grand Rapids Community College, 2005-2006.
 \end{itemize}
+
 \subsection*{Honors and Awards}
 \begin{itemize}
 \item Vanderbilt Dissertation Enhancement Grant of \$2,000 to attend the Theoretical Advanced Study Institute in
@@ -111,6 +59,7 @@ June 2014, awarded April 2014.
 \item The Robert T.~Lagemann Award of \$1,000 for highest academic achievement by a first-year graduate student, awarded April 2011.
 \item ``Topping-up" McMinn Fellowship of \$5,000 a year of five years, awarded March 2010.
 \end{itemize}
+
 \subsection*{Employment}
 \begin{itemize}
 \item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011--Present.
@@ -121,6 +70,7 @@ June 2014, awarded April 2014.
 \item Bonner Labs at Rice University with Bill Llope, Summer 2008.
 \item Writing consultant at Rice University, 2007--2010.
 \end{itemize}
+
 \subsection*{Selected Research Topics}
 \begin{itemize}
 \item Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observatory and JEM-EUSO.
@@ -129,16 +79,19 @@ June 2014, awarded April 2014.
 \item Matching Weinberg's Higgs portal to $N_{\rm{eff}}$ measurements.
 \item Characterizing electroweak bremsstrahlung with effective operators to reduce spin suppression.
 \end{itemize}
+
 \subsection*{Language Skills}
 \begin{itemize}
 \item 
 \LaTeX, beamer, python, matplotlib, C++, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
 \end{itemize}
+
 \subsection*{Teaching}
 \begin{itemize}
 \item Teaching assistant for various freshman physics labs, 2010-Present.
 \item Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels, 2005-Present.
 \end{itemize}
+
 \subsection*{Professional Societies}
 \begin{itemize}
 \item Member, American Physical Society
