updated header to include website

--- a/CV.tex
+++ b/CV.tex
@@ -30,16 +30,11 @@
 
 \vspace{0.1in}
 
-\begin{minipage}{0.45\linewidth}
-138 Village at Vanderbilt\\
-Nashville TN 37212
-\end{minipage}
-\begin{minipage}{0.45\linewidth}
-\begin{tabular}{ll}
-Phone: & (616) 450-0749\\
-Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} \\
+\begin{tabular}{ll|l|ll}
+Phone: & (616) 450-0749 & 138 Village at Vanderbilt & Updated: & \today\\
+Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Nashville TN 37212 & Website: & 
+\href{http://peterdenton.github.io}{\tt peterdenton.github.io}
 \end{tabular}
-\end{minipage}
 
 \subsection*{Education}
 \begin{itemize}
