--- a/CV.tex
+++ b/CV.tex
@@ -68,11 +68,11 @@ June 2014, awarded April 2014.
 
 \subsection*{Selected Research Topics}
 \begin{itemize}
-\item Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observatory and JEM-EUSO.
+\item Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observatory, Telescope Array, and EUSO.
 \item Beyond the standard model contribution to integral dispersion integrals for $pp$ scattering at LHC energies.
 \item The possibility of cosmic rays producing black holes in the atmosphere.
 \item Matching Weinberg's Higgs portal to $N_{\rm{eff}}$ measurements.
-\item Characterizing electroweak bremsstrahlung with effective operators to reduce spin suppression.
+% \item Characterizing electroweak bremsstrahlung with effective operators to reduce spin suppression.
 \end{itemize}
 
 \subsection*{Language Skills}
