updated research topics

--- a/CV.tex
+++ b/CV.tex
@@ -68,6 +68,8 @@ June 2014, awarded April 2014.
 
 \subsection*{Selected Research Topics}
 \begin{itemize}
+\item High energy astroparticle physics.
+\item Neutrino anisotropy at the highest energies as seen by IceCube.
 \item Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observatory, Telescope Array, and EUSO.
 \item Beyond the standard model contribution to integral dispersion integrals for $pp$ scattering at LHC energies.
 \item The possibility of cosmic rays producing black holes in the atmosphere.
