added fermilab grad student employment

--- a/CV.tex
+++ b/CV.tex
@@ -57,24 +57,24 @@ in June 2014, awarded April 2014.
 
 \subsection*{Employment}
 \begin{itemize}
-\item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011--Present.
-\item Teaching assistant at Vanderbilt University, Fall 2010--Fall 2012.
-\item Research assistant with Sokrates Pantelides at Vanderbilt University, Summer--Fall 2010.
+\item Fermilab Graduate Student Research Program in Theoretical Physics with Stephen Parke, August 2015-August 2016.
+\item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011-Present.
+\item Teaching assistant at Vanderbilt University, Fall 2010-Fall 2012.
+\item Research assistant with Sokrates Pantelides at Vanderbilt University, Summer-Fall 2010.
 \item Lee Teng Internship at Fermilab with Tanaji Sen, Summer 2009.
 \item Teaching assistant for the Physics Department at Rice University, Fall 2009.
 \item Bonner Labs at Rice University with Bill Llope, Summer 2008.
-\item Writing consultant at Rice University, 2007--2010.
+\item Writing consultant at Rice University, 2007-2010.
 \end{itemize}
 
 \subsection*{Selected Research Topics}
 \begin{itemize}
 \item High energy astroparticle physics.
 \item Neutrino anisotropy at the highest energies as seen by IceCube.
-\item Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observatory, Telescope Array, and EUSO.
+\item Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observatory, Telescope Array, and JEM-EUSO.
 \item Beyond the standard model contribution to integral dispersion integrals for $pp$ scattering at LHC energies.
 \item The possibility of cosmic rays producing black holes in the atmosphere.
 \item Matching Weinberg's Higgs portal to $N_{\rm{eff}}$ measurements.
-% \item Characterizing electroweak bremsstrahlung with effective operators to reduce spin suppression.
 \end{itemize}
 
 \subsection*{Language Skills}
@@ -85,7 +85,7 @@ in June 2014, awarded April 2014.
 
 \subsection*{Teaching}
 \begin{itemize}
-\item Teaching assistant for various freshman physics labs, 2010-Present.
+\item Teaching assistant for various freshman physics labs, 2010-2014.
 \item Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels, 2005-Present.
 \end{itemize}
 
