--- a/CV.tex
+++ b/CV.tex
@@ -31,8 +31,8 @@
 \vspace{0.1in}
 
 \begin{tabular}{ll|l|ll}
-Phone: & (616) 450-0749 & 138 Village at Vanderbilt & Updated: & \today\\
-Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Nashville TN 37212 & Website: & 
+Phone: & (616) 450-0749 & 1036 Heritage Hill Dr Apt B & Updated: & \today\\
+Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Naperville IL 60563 & Website: & 
 \href{http://peterdenton.github.io}{\tt peterdenton.github.io}
 \end{tabular}
 
