added neutrino proj to research topics

--- a/CV.tex
+++ b/CV.tex
@@ -69,6 +69,7 @@ in June 2014, awarded April 2014.
 
 \subsection*{Selected Research Topics}
 \begin{itemize}
+\item Neutrino oscillations in perturbation theory.
 \item High energy astroparticle physics.
 \item Neutrino anisotropy at the highest energies as seen by IceCube.
 \item Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observatory, Telescope Array, and JEM-EUSO.
