--- a/CV.tex
+++ b/CV.tex
@@ -36,16 +36,22 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Naperville I
 \href{http://peterdenton.github.io}{\tt peterdenton.github.io}
 \end{tabular}
 
-\subsection*{Employment}
+\subsection*{Research Experience}
 \begin{itemize}
 \item Fermilab Graduate Student Research Program in Theoretical Physics with Stephen Parke, August 2015-August 2016.
-\item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011-Present.
-\item Teaching assistant at Vanderbilt University, Fall 2010-Fall 2012.
+\item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011-Fall 2015.
 \item Research assistant with Sokrates Pantelides at Vanderbilt University, Summer-Fall 2010.
 \item Lee Teng Internship at Fermilab with Tanaji Sen, Summer 2009.
-\item Teaching assistant for the Physics Department at Rice University, Fall 2009.
 \item Bonner Labs at Rice University with Bill Llope, Summer 2008.
-\item Writing consultant at Rice University, 2007-2010.
+\end{itemize}
+
+\subsection*{Education}
+\begin{itemize}
+\item Ph.D. Physics, Vanderbilt University (in progress).
+\item B.S. Physics, Rice University, 2010.
+\item B.A. Mathematics, Rice University, 2010.
+% \item Introduction to accelerator physics, United States Particle Accelerator School, 2009.
+% \item Multi-variable calculus, differential equations, Grand Rapids Community College, 2005-2006.
 \end{itemize}
 
 \subsection*{Honors and Awards}
@@ -56,15 +62,6 @@ in June 2014, awarded April 2014.
 \item Division of Particles \& Fields travel grant of \$120 to the APS April 2013 meeting, awarded March 2013.
 \item The Robert T.~Lagemann Award of \$1,000 for highest academic achievement by a first-year graduate student, awarded April 2011.
 \item ``Topping-up" McMinn Fellowship of \$5,000 a year of five years, awarded March 2010.
-\end{itemize}
-
-\subsection*{Education}
-\begin{itemize}
-\item Ph.D. Physics, Vanderbilt University (in progress).
-\item B.S. Physics, Rice University, 2010.
-\item B.A. Mathematics, Rice University, 2010.
-% \item Introduction to accelerator physics, United States Particle Accelerator School, 2009.
-% \item Multi-variable calculus, differential equations, Grand Rapids Community College, 2005-2006.
 \end{itemize}
 
 \subsection*{Selected Research Topics}
@@ -86,8 +83,10 @@ in June 2014, awarded April 2014.
 
 \subsection*{Teaching}
 \begin{itemize}
-\item Teaching assistant for various freshman physics labs, 2010-2014.
-\item Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels, 2005-Present.
+\item Teaching assistant at Vanderbilt University, Fall 2010-Spring 2015.
+\item Teaching assistant for the Physics Department at Rice University, Fall 2009.
+\item Writing consultant at Rice University, 2007-2010.
+\item Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels, 2005-2015.
 \end{itemize}
 
 \subsection*{Professional Societies}
