--- a/CV.tex
+++ b/CV.tex
@@ -38,11 +38,11 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Naperville I
 
 \subsection*{Research Experience}
 \begin{itemize}
-\item Fermilab Graduate Student Research Program in Theoretical Physics with Stephen Parke, August 2015-August 2016.
+\item Graduate Student Research Program in Theoretical Physics with Stephen Parke at Fermilab, August 2015-August 2016.
 \item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011-Fall 2015.
 \item Research assistant with Sokrates Pantelides at Vanderbilt University, Summer-Fall 2010.
-\item Lee Teng Internship at Fermilab with Tanaji Sen, Summer 2009.
-\item Bonner Labs at Rice University with Bill Llope, Summer 2008.
+\item Lee Teng Internship with Tanaji Sen at Fermilab, Summer 2009.
+\item Bonner Labs with Bill Llope at Rice University, Summer 2008.
 \end{itemize}
 
 \subsection*{Education}
