added pitt pacc pheno 16 travel award

--- a/CV.tex
+++ b/CV.tex
@@ -56,6 +56,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Naperville I
 
 \subsection*{Honors and Awards}
 \begin{itemize}
+\item PITT PACC travel award of \$300 to attend Pheno '16, awarded April 2016.
 \item Vanderbilt Dissertation Enhancement Grant of \$2,000 to attend the Theoretical Advanced Study Institute: Amplitudes For Colliders
 in June 2014, awarded April 2014.
 \item Subsidy of \$1,600 to attend the Theoretical Advanced Study Institute: Amplitudes For Colliders in June 2014, awarded April 2014.
@@ -66,7 +67,7 @@ in June 2014, awarded April 2014.
 
 \subsection*{Selected Research Topics}
 \begin{itemize}
-\item Neutrino oscillations in perturbation theory.
+\item Neutrino oscillations in matter with perturbation theory.
 \item High energy astroparticle physics.
 \item Neutrino anisotropy at the highest energies as seen by IceCube.
 \item Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observatory, Telescope Array, and JEM-EUSO.
