--- a/CV.tex
+++ b/CV.tex
@@ -59,6 +59,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Naperville I
 \subsection*{Education}
 \begin{itemize}
 \item Ph.D. Physics, Vanderbilt University (in progress).
+\item Theoretical Advanced Study Institute in Elementary Particle Physics (TASI), Boulder CO, June 2014.
 \item B.S. Physics, Rice University, 2010.
 \item B.A. Mathematics, Rice University, 2010.
 % \item Introduction to accelerator physics, United States Particle Accelerator School, 2009.
