added issp school and diploma

--- a/CV.tex
+++ b/CV.tex
@@ -59,15 +59,21 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Naperville I
 \subsection*{Education}
 \begin{itemize}
 \item Ph.D. Physics, Vanderbilt University (in progress).
-\item Theoretical Advanced Study Institute in Elementary Particle Physics (TASI), Boulder CO, June 2014.
 \item B.S. Physics, Rice University, 2010.
 \item B.A. Mathematics, Rice University, 2010.
 % \item Introduction to accelerator physics, United States Particle Accelerator School, 2009.
 % \item Multi-variable calculus, differential equations, Grand Rapids Community College, 2005-2006.
 \end{itemize}
 
+\subsection*{Physics Schools}
+\begin{itemize}
+\item Erice International School of Subnuclear Physics (ISSP), June 2016.
+\item Theoretical Advanced Study Institute in Elementary Particle Physics (TASI), Boulder CO, June 2014.
+\end{itemize}
+
 \subsection*{Honors and Awards}
 \begin{itemize}
+\item The Giorgio Salvini diploma from the Erice International School of Subnuclear Physics, awarded June 2016.
 \item PITT PACC travel award of \$300 to attend Pheno '16, awarded April 2016.
 \item Vanderbilt Dissertation Enhancement Grant of \$2,000 to attend the Theoretical Advanced Study Institute: Amplitudes For Colliders
 in June 2014, awarded April 2014.
