am now a doctor

--- a/CV.tex
+++ b/CV.tex
@@ -10,7 +10,7 @@
 \usepackage{hyperref}
 \hypersetup{colorlinks=false,pdfborder={0 0 0}}
 
-\def\name{Peter B.~Denton}
+\def\name{Dr.~Peter B.~Denton}
 \title{CV}
 
 \pagestyle{myheadings}
@@ -58,9 +58,9 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Naperville I
 
 \subsection*{Education}
 \begin{itemize}
-\item Ph.D. Physics, Vanderbilt University (in progress).
-\item B.S. Physics, Rice University, 2010.
-\item B.A. Mathematics, Rice University, 2010.
+\item Ph.D. Physics, Vanderbilt University August 2016.
+\item B.S. Physics, Rice University, May 2010.
+\item B.A. Mathematics, Rice University, May 2010.
 % \item Introduction to accelerator physics, United States Particle Accelerator School, 2009.
 % \item Multi-variable calculus, differential equations, Grand Rapids Community College, 2005-2006.
 \end{itemize}
