changed Dr. to Ph.D.

--- a/CV.tex
+++ b/CV.tex
@@ -10,7 +10,7 @@
 \usepackage{hyperref}
 \hypersetup{colorlinks=false,pdfborder={0 0 0}}
 
-\def\name{Dr.~Peter B.~Denton}
+\def\name{Peter B.~Denton, Ph.D.}
 \title{CV}
 
 \pagestyle{myheadings}
@@ -58,7 +58,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Naperville I
 
 \subsection*{Education}
 \begin{itemize}
-\item Ph.D. Physics, Vanderbilt University August 2016.
+\item Ph.D. Physics, Vanderbilt University, August 2016.
 \item B.S. Physics, Rice University, May 2010.
 \item B.A. Mathematics, Rice University, May 2010.
 % \item Introduction to accelerator physics, United States Particle Accelerator School, 2009.
