--- a/CV.tex
+++ b/CV.tex
@@ -42,13 +42,14 @@
 \vspace{0.1in}
 
 \begin{tabular}{ll|l|ll}
-Phone: & (616) 450-0749 & 1036 Heritage Hill Dr Apt B & Updated: & \today\\
-Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Naperville IL 60563 & Website: & 
+Phone: & +45 71 49 29 40 & Gernersgade 35, 1 th & Updated: & \today\\
+Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & København K 1319 & Website: & 
 \href{http://peterdenton.github.io}{\tt peterdenton.github.io}
 \end{tabular}
 
 \subsection*{Research Experience}
 \begin{itemize}
+\item Postdoctoral Fellow with Irene Tamborra at Niels Bohr International Academy, September 2016-Present.
 \item Graduate Student Research Program in Theoretical Physics with Stephen Parke at Fermilab, August 2015-August 2016.
 \item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011-Fall 2015.
 \item Research assistant with Sokrates Pantelides at Vanderbilt University, Summer-Fall 2010.
