added nuclear physics b reviewer, trimmed down research interests

--- a/CV.tex
+++ b/CV.tex
@@ -86,19 +86,21 @@ in June 2014, awarded April 2014.
 
 \subsection*{Selected Research Topics}
 \begin{itemize}
-\item Neutrino oscillations in matter with perturbation theory.
+\item Standard and BSM neutrino oscillations theory.
 \item High energy astroparticle physics.
-\item Neutrino anisotropy at the highest energies as seen by IceCube.
-\item Cosmic ray anisotropy at the highest energies as seen through Pierre Auger Observatory, Telescope Array, and JEM-EUSO.
-\item Beyond the standard model contribution to integral dispersion integrals for $pp$ scattering at LHC energies.
-\item The possibility of cosmic rays producing black holes in the atmosphere.
-\item Matching Weinberg's Higgs portal to $N_{\rm{eff}}$ measurements.
+\item Cosmic ray and neutrino anisotropy searches.
+\item Novel BSM searches at the LHC.
 \end{itemize}
 
 \subsection*{Language Skills}
 \begin{itemize}
 \item 
 \LaTeX, beamer, python, matplotlib, C++, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
+\end{itemize}
+
+\subsection*{Service}
+\begin{itemize}
+\item Journal reviewer for Nuclear Physics B
 \end{itemize}
 
 \subsection*{Teaching}
