--- a/CV.tex
+++ b/CV.tex
@@ -49,10 +49,10 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & København K
 
 \subsection*{Research Experience}
 \begin{itemize}
-\item Postdoctoral Fellow with Irene Tamborra at Niels Bohr International Academy, September 2016-Present.
-\item Graduate Student Research Program in Theoretical Physics with Stephen Parke at Fermilab, August 2015-August 2016.
-\item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011-Fall 2015.
-\item Research assistant with Sokrates Pantelides at Vanderbilt University, Summer-Fall 2010.
+\item Postdoctoral Fellow with Irene Tamborra at Niels Bohr International Academy, September 2016--Present.
+\item Graduate Student Research Program in Theoretical Physics with Stephen Parke at Fermilab, August 2015--August 2016.
+\item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011--Fall 2015.
+\item Research assistant with Sokrates Pantelides at Vanderbilt University, Summer--Fall 2010.
 \item Lee Teng Internship with Tanaji Sen at Fermilab, Summer 2009.
 \item Bonner Labs with Bill Llope at Rice University, Summer 2008.
 \end{itemize}
@@ -63,7 +63,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & København K
 \item B.S. Physics, Rice University, May 2010.
 \item B.A. Mathematics, Rice University, May 2010.
 % \item Introduction to accelerator physics, United States Particle Accelerator School, 2009.
-% \item Multi-variable calculus, differential equations, Grand Rapids Community College, 2005-2006.
+% \item Multi-variable calculus, differential equations, Grand Rapids Community College, 2005--2006.
 \end{itemize}
 
 \subsection*{Physics Schools}
@@ -100,15 +100,15 @@ in June 2014, awarded April 2014.
 
 \subsection*{Service}
 \begin{itemize}
-\item Journal reviewer for Nuclear Physics B
+\item Reviewer for Nuclear Physics B
 \end{itemize}
 
 \subsection*{Teaching}
 \begin{itemize}
-\item Teaching assistant at Vanderbilt University, Fall 2010-Spring 2015.
+\item Teaching assistant at Vanderbilt University, Fall 2010--Spring 2015.
 \item Teaching assistant for the Physics Department at Rice University, Fall 2009.
-\item Writing consultant at Rice University, 2007-2010.
-\item Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels, 2005-2015.
+\item Writing consultant at Rice University, 2007--2010.
+\item Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels, 2005--2015.
 \end{itemize}
 
 \subsection*{Professional Societies}
