--- a/CV.tex
+++ b/CV.tex
@@ -68,7 +68,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & København K
 
 \subsection*{Physics Schools}
 \begin{itemize}
-\item Erice International School of Subnuclear Physics (ISSP), June 2016.
+\item Erice International School of Subnuclear Physics in Sicily (ISSP), June 2016.
 \item Theoretical Advanced Study Institute in Elementary Particle Physics (TASI), Boulder CO, June 2014.
 \end{itemize}
 
