--- a/CV.tex
+++ b/CV.tex
@@ -5,6 +5,7 @@
 \@ifpackageloaded{tex4ht}{\htlatextrue}{\htlatexfalse}
 \makeatother
 
+\usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
