--- a/CV.tex
+++ b/CV.tex
@@ -5,7 +5,6 @@
 \@ifpackageloaded{tex4ht}{\htlatextrue}{\htlatexfalse}
 \makeatother
 
-\usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
@@ -44,7 +43,7 @@
 
 \begin{tabular}{ll|l|ll}
 Phone: & +45 71 49 29 40 & Gernersgade 35, 1 th & Updated: & \today\\
-Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & København K 1319 & Website: & 
+Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Copenhagen K 1319 & Website: & 
 \href{http://peterdenton.github.io}{\tt peterdenton.github.io}
 \end{tabular}
 
