--- a/CV.tex
+++ b/CV.tex
@@ -20,6 +20,7 @@
 \usepackage{sectsty}
 \sectionfont{\rmfamily\mdseries\Large}
 \subsectionfont{\rmfamily\mdseries\itshape\large}
+\subsubsectionfont{\rmfamily\mdseries\itshape\normalsize}
 
 \setlength\parindent{0em}
 
@@ -57,6 +58,14 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Copenhagen K
 \item Bonner Labs with Bill Llope at Rice University, Summer 2008.
 \end{itemize}
 
+\subsection*{Selected Research Topics}
+\begin{itemize}
+\item Standard and BSM neutrino oscillations theory.
+\item High energy astroparticle physics.
+\item Cosmic ray and neutrino anisotropy searches.
+\item Novel BSM searches at the LHC.
+\end{itemize}
+
 \subsection*{Education}
 \begin{itemize}
 \item Ph.D. Physics, Vanderbilt University, August 2016.
@@ -84,14 +93,6 @@ in June 2014, awarded April 2014.
 \item ``Topping-up" McMinn Fellowship of \$5,000 a year of five years, awarded March 2010.
 \end{itemize}
 
-\subsection*{Selected Research Topics}
-\begin{itemize}
-\item Standard and BSM neutrino oscillations theory.
-\item High energy astroparticle physics.
-\item Cosmic ray and neutrino anisotropy searches.
-\item Novel BSM searches at the LHC.
-\end{itemize}
-
 \subsection*{Language Skills}
 \begin{itemize}
 \item 
@@ -100,7 +101,12 @@ in June 2014, awarded April 2014.
 
 \subsection*{Service}
 \begin{itemize}
-\item Reviewer for Nuclear Physics B
+\item Reviewer for Nuclear Physics B.
+\end{itemize}
+
+\subsection*{Students}
+\begin{itemize}
+\item Mia-Louise Nielsen, University of Copenhagen, bachelor's thesis: \emph{The origin of IceCube neutrinos}, 2017.
 \end{itemize}
 
 \subsection*{Teaching}
@@ -113,6 +119,7 @@ in June 2014, awarded April 2014.
 
 \subsection*{Professional Societies}
 \begin{itemize}
-\item Member, American Physical Society
+\item Member, American Physical Society.
 \end{itemize}
+
 \end{document}
