--- a/CV.tex
+++ b/CV.tex
@@ -58,12 +58,12 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Copenhagen K
 \item Bonner Labs with Bill Llope at Rice University, Summer 2008.
 \end{itemize}
 
-\subsection*{Selected Research Topics}
+\subsection*{Research Interests}
 \begin{itemize}
 \item Standard and BSM neutrino oscillations theory.
 \item High energy astroparticle physics.
 \item Cosmic ray and neutrino anisotropy searches.
-\item Novel BSM searches at the LHC.
+% \item Novel BSM searches at the LHC.
 \end{itemize}
 
 \subsection*{Education}
