added nbia jc co-chair

--- a/CV.tex
+++ b/CV.tex
@@ -102,6 +102,7 @@ in June 2014, awarded April 2014.
 \subsection*{Service}
 \begin{itemize}
 \item Reviewer for Nuclear Physics B.
+\item NBIA Astroparticle journal club co-chair, 2017--Present.
 \end{itemize}
 
 \subsection*{Students}
