--- a/CV.tex
+++ b/CV.tex
@@ -60,9 +60,9 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Copenhagen K
 
 \subsection*{Research Interests}
 \begin{itemize}
-\item Standard and BSM neutrino oscillations theory.
-\item High energy astroparticle physics.
-\item Cosmic ray and neutrino anisotropy searches.
+\item SM and BSM neutrino theory.
+\item High energy astroparticle physics: UHECRs, neutrinos, anisotropies.
+% \item Cosmic ray and neutrino anisotropy searches.
 % \item Novel BSM searches at the LHC.
 \end{itemize}
 
@@ -90,7 +90,7 @@ in June 2014, awarded April 2014.
 \item Subsidy of \$1,600 to attend the Theoretical Advanced Study Institute: Amplitudes For Colliders in June 2014, awarded April 2014.
 \item Division of Particles \& Fields travel grant of \$120 to the APS April 2013 meeting, awarded March 2013.
 \item The Robert T.~Lagemann Award of \$1,000 for highest academic achievement by a first-year graduate student, awarded April 2011.
-\item ``Topping-up" McMinn Fellowship of \$5,000 a year of five years, awarded March 2010.
+\item McMinn Fellowship of \$5,000 a year of five years, awarded March 2010.
 \end{itemize}
 
 \subsection*{Language Skills}
@@ -107,6 +107,8 @@ in June 2014, awarded April 2014.
 
 \subsection*{Students}
 \begin{itemize}
+\item Klaes M\o ller, University of Copenhagen, master's student, 2017--present.
+\item Anna Suliga, University of Copenhagen, master's student, 2017--present.
 \item Mia-Louise Nielsen, University of Copenhagen, bachelor's thesis: \emph{The origin of IceCube neutrinos}, 2017.
 \end{itemize}
 
