--- a/CV.tex
+++ b/CV.tex
@@ -96,7 +96,7 @@ in June 2014, awarded April 2014.
 \subsection*{Language Skills}
 \begin{itemize}
 \item 
-\LaTeX, beamer, python, matplotlib, C++, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
+c++, python, matplotlib, \LaTeX, beamer, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
 \end{itemize}
 
 \subsection*{Service}
