--- a/CV.tex
+++ b/CV.tex
@@ -38,16 +38,26 @@
 \Tag{TITLE+}{CV}
 \fi
 
+% % % % % With headshot
 % \includegraphics[width=1.2in]{face_cropped}
 % \parbox{\textwidth-1.3in}{\vspace*{-1.1in}
+% {\huge \name}\\
+% \vspace*{0.1in}
+% \begin{tabular}{ll|l|ll}
+% +45 71 49 29 40 & Gernersgade 35, 1 th & Updated: & \today\\
+% \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Copenhagen K 1319 & Website: & 
+% \href{http://peterdenton.github.io}{\tt peterdenton.github.io}
+% \end{tabular}
+% }
+
+% % % % % Without headshot
 {\huge \name}\\
-\vspace*{0.1in}
+\vspace{0.1in}
 \begin{tabular}{ll|l|ll}
-+45 71 49 29 40 & Gernersgade 35, 1 th & Updated: & \today\\
-\href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Copenhagen K 1319 & Website: & 
+Phone: & +45 71 49 29 40 & Gernersgade 35, 1 th & Updated: & \today\\
+Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Copenhagen K 1319 & Website: & 
 \href{http://peterdenton.github.io}{\tt peterdenton.github.io}
 \end{tabular}
-% }
 
 \subsection*{Research Experience}
 \begin{itemize}
@@ -97,7 +107,7 @@ in June 2014, awarded April 2014.
 \subsection*{Language Skills}
 \begin{itemize}
 \item 
-c++, python, matplotlib, \LaTeX, beamer, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
+c++, mpi, python, matplotlib, \LaTeX, beamer, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
 \end{itemize}
 
 \subsection*{Service}
