added openmp to skills

--- a/CV.tex
+++ b/CV.tex
@@ -1,4 +1,4 @@
-\documentclass[letterpaper]{article}
+\documentclass{article}
 
 \makeatletter
 \newif\ifhtlatex
@@ -107,7 +107,7 @@ in June 2014, awarded April 2014.
 \subsection*{Language Skills}
 \begin{itemize}
 \item 
-c++, mpi, python, matplotlib, \LaTeX, beamer, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
+c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
 \end{itemize}
 
 \subsection*{Service}
