--- a/CV.tex
+++ b/CV.tex
@@ -72,9 +72,7 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Copenhagen K
 \subsection*{Research Interests}
 \begin{itemize}
 \item SM and BSM neutrino theory.
-\item High energy astroparticle physics: neutrinos, UHECRs, anisotropies.
-% \item Cosmic ray and neutrino anisotropy searches.
-% \item Novel BSM searches at the LHC.
+\item Astroparticle physics.
 \end{itemize}
 
 \subsection*{Education}
@@ -101,13 +99,13 @@ in June 2014, awarded April 2014.
 \item Subsidy of \$1,600 to attend the Theoretical Advanced Study Institute: Amplitudes For Colliders in June 2014, awarded April 2014.
 \item Division of Particles \& Fields travel grant of \$120 to the APS April 2013 meeting, awarded March 2013.
 \item The Robert T.~Lagemann Award of \$1,000 for highest academic achievement by a first-year graduate student, awarded April 2011.
-\item McMinn Fellowship of \$5,000 a year of five years, awarded March 2010.
+\item McMinn Fellowship of \$5,000 a year for five years, awarded March 2010.
 \end{itemize}
 
-\subsection*{Language Skills}
+\subsection*{Skills}
 \begin{itemize}
 \item 
-c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
+c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, pythia, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
 \end{itemize}
 
 \subsection*{Service}
