--- a/CV.tex
+++ b/CV.tex
@@ -105,7 +105,7 @@ in June 2014, awarded April 2014.
 \subsection*{Skills}
 \begin{itemize}
 \item 
-c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, pythia, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
+c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
 \end{itemize}
 
 \subsection*{Service}
@@ -118,7 +118,7 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, pythia, ROOT, MATHEMATICA,
 \begin{itemize}
 \item Klaes M\o ller, University of Copenhagen, master's student, 2017--present.
 \item Anna Suliga, University of Copenhagen, master's student, 2017--present.
-\item Mia-Louise Nielsen, University of Copenhagen, bachelor's thesis: \emph{The origin of IceCube neutrinos}, 2017.
+\item Mia-Louise Nielsen, University of Copenhagen, bachelor's thesis: \emph{Star-forming galaxies as sources of high energy neutrinos}, 2017.
 \end{itemize}
 
 \subsection*{Teaching}
