added jhep referee

--- a/CV.tex
+++ b/CV.tex
@@ -110,7 +110,7 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 
 \subsection*{Service}
 \begin{itemize}
-\item Reviewer for Nuclear Physics B.
+\item Reviewer for JHEP and Nuclear Physics B.
 \item NBIA Astroparticle journal club co-chair, 2017--Present.
 \end{itemize}
 
