added grand and ntn

--- a/CV.tex
+++ b/CV.tex
@@ -84,14 +84,9 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Copenhagen K
 % \item Multi-variable calculus, differential equations, Grand Rapids Community College, 2005--2006.
 \end{itemize}
 
-\subsection*{Physics Schools}
-\begin{itemize}
-\item Erice International School of Subnuclear Physics in Sicily (ISSP), June 2016.
-\item Theoretical Advanced Study Institute in Elementary Particle Physics (TASI), Boulder CO, June 2014.
-\end{itemize}
-
 \subsection*{Honors and Awards}
 \begin{itemize}
+\item Neutrino Theory Network award of \$14,000 to work with Irina Mocioiu at PSU, awarded June 2018.
 \item The Giorgio Salvini diploma from the Erice International School of Subnuclear Physics, awarded June 2016.
 \item PITT PACC travel award of \$300 to attend Pheno '16, awarded April 2016.
 \item Vanderbilt Dissertation Enhancement Grant of \$2,000 to attend the Theoretical Advanced Study Institute: Amplitudes For Colliders
@@ -100,6 +95,17 @@ in June 2014, awarded April 2014.
 \item Division of Particles \& Fields travel grant of \$120 to the APS April 2013 meeting, awarded March 2013.
 \item The Robert T.~Lagemann Award of \$1,000 for highest academic achievement by a first-year graduate student, awarded April 2011.
 \item McMinn Fellowship of \$5,000 a year for five years, awarded March 2010.
+\end{itemize}
+
+\subsection*{Collaborations}
+\begin{itemize}
+\item Giant Radio Array for Neutrino Detection (GRAND), 2017--Present.
+\end{itemize}
+
+\subsection*{Physics Schools}
+\begin{itemize}
+\item Erice International School of Subnuclear Physics in Sicily (ISSP), June 2016.
+\item Theoretical Advanced Study Institute in Elementary Particle Physics (TASI), Boulder CO, June 2014.
 \end{itemize}
 
 \subsection*{Skills}
