--- a/CV.tex
+++ b/CV.tex
@@ -116,14 +116,14 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 
 \subsection*{Service}
 \begin{itemize}
-\item Reviewer for JHEP and Nuclear Physics B.
+\item Reviewer for JHEP, PRD, and Nuclear Physics B.
 \item NBIA Astroparticle journal club co-chair, 2017--Present.
 \end{itemize}
 
 \subsection*{Students}
 \begin{itemize}
 \item Klaes M\o ller, University of Copenhagen, master's student, 2017--present.
-\item Anna Suliga, University of Copenhagen, master's student, 2017--present.
+\item Anna Suliga, University of Copenhagen, master's thesis: \emph{Diffuse supernova neutrino background}, 2017--2018.
 \item Mia-Louise Nielsen, University of Copenhagen, bachelor's thesis: \emph{Star-forming galaxies as sources of high energy neutrinos}, 2017.
 \end{itemize}
 
