added bnl job, klaes graduated

--- a/CV.tex
+++ b/CV.tex
@@ -61,7 +61,8 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Copenhagen K
 
 \subsection*{Research Experience}
 \begin{itemize}
-\item Postdoctoral Fellow with Irene Tamborra at Niels Bohr International Academy, September 2016--Present.
+\item Assistant Physicist at Brookhaven National Laboratory, October 2018--Present.
+\item Postdoctoral Fellow with Irene Tamborra at Niels Bohr International Academy, September 2016--August 2018.
 \item Graduate Student Research Program in Theoretical Physics with Stephen Parke at Fermilab, August 2015--August 2016.
 \item DOE funded research assistant with Thomas J.~Weiler at Vanderbilt University, Spring 2011--Fall 2015.
 \item Research assistant with Sokrates Pantelides at Vanderbilt University, Summer--Fall 2010.
@@ -108,23 +109,31 @@ in June 2014, awarded April 2014.
 \item Theoretical Advanced Study Institute in Elementary Particle Physics (TASI), Boulder CO, June 2014.
 \end{itemize}
 
-\subsection*{Skills}
+\subsection*{Software}
 \begin{itemize}
 \item 
-c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, and javascript.
+c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATHEMATICA, MATLAB, FORTRAN, gnuplot, java, html, javascript, \dots
 \end{itemize}
 
 \subsection*{Service}
 \begin{itemize}
 \item Reviewer for JHEP, PRD, and Nuclear Physics B.
-\item NBIA Astroparticle journal club co-chair, 2017--Present.
+\item NBIA Astroparticle journal club co-chair, 2017--2018.
 \end{itemize}
+
+\subsection*{Outreach}
+\begin{itemize}
+\item Interacted with high school students via APS's \emph{Adopt-A-Physicist} program, 2018 Fall semester.
+\end{itemize}
+
 
 \subsection*{Students}
 \begin{itemize}
-\item Klaes M\o ller, University of Copenhagen, master's student, 2017--present.
+\item Klaes M\o ller, University of Copenhagen, master's thesis: \emph{Constraining Astrophysical Parameters with Neutrinos}, 2017--2018.
 \item Anna Suliga, University of Copenhagen, master's thesis: \emph{Diffuse supernova neutrino background}, 2017--2018.
+Currently PhD student at University of Copenhagen.
 \item Mia-Louise Nielsen, University of Copenhagen, bachelor's thesis: \emph{Star-forming galaxies as sources of high energy neutrinos}, 2017.
+Currently masters student at University of Copenhagen.
 \end{itemize}
 
 \subsection*{Teaching}
