updated for bnl

--- a/CV.tex
+++ b/CV.tex
@@ -54,8 +54,8 @@
 {\huge \name}\\
 \vspace{0.1in}
 \begin{tabular}{ll|l|ll}
-Phone: & +45 71 49 29 40 & Gernersgade 35, 1 th & Updated: & \today\\
-Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Copenhagen K 1319 & Website: & 
+Phone: & +1-631-344-3767 & Bldg 510A PO Box 5000 & Updated: & \today\\
+Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11973 & Website: & 
 \href{http://peterdenton.github.io}{\tt peterdenton.github.io}
 \end{tabular}
 
@@ -117,7 +117,7 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 
 \subsection*{Service}
 \begin{itemize}
-\item Reviewer for JHEP, PRD, and Nuclear Physics B.
+\item Reviewer for JHEP, PRD, Physics Letters B, and Nuclear Physics B.
 \item NBIA Astroparticle journal club co-chair, 2017--2018.
 \end{itemize}
 
@@ -125,7 +125,6 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 \begin{itemize}
 \item Interacted with high school students via APS's \emph{Adopt-A-Physicist} program, 2018 Fall semester.
 \end{itemize}
-
 
 \subsection*{Students}
 \begin{itemize}
