added het lunch discussion chair

--- a/CV.tex
+++ b/CV.tex
@@ -117,6 +117,7 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 
 \subsection*{Service}
 \begin{itemize}
+\item BNL HET Lunch Discussion chair, 2019--Present.
 \item Reviewer for JHEP, PRD, Physics Letters B, and Nuclear Physics B.
 \item NBIA Astroparticle journal club co-chair, 2017--2018.
 \end{itemize}
