--- a/CV.tex
+++ b/CV.tex
@@ -51,7 +51,8 @@
 % }
 
 % % % % % Without headshot
-{\huge \name}\\
+\vspace*{-0.5in}
+{\huge \name}\hfill\includegraphics[height=0.8in]{BNL}\\
 \vspace{0.1in}
 \begin{tabular}{ll|l|ll}
 Phone: & +1-631-344-3767 & Bldg 510A PO Box 5000 & Updated: & \today\\
@@ -78,16 +79,16 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 
 \subsection*{Education}
 \begin{itemize}
-\item Ph.D. Physics, Vanderbilt University, August 2016.
-\item B.S. Physics, Rice University, May 2010.
-\item B.A. Mathematics, Rice University, May 2010.
-% \item Introduction to accelerator physics, United States Particle Accelerator School, 2009.
+\item Ph.D.~Physics, Vanderbilt University, August 2016.
+\item B.S.~Physics, Rice University, May 2010.
+\item B.A.~Mathematics, Rice University, May 2010.
 % \item Multi-variable calculus, differential equations, Grand Rapids Community College, 2005--2006.
 \end{itemize}
 
 \subsection*{Honors and Awards}
 \begin{itemize}
-\item Neutrino Theory Network award of \$14,000 to work with Irina Mocioiu at PSU, awarded June 2018.
+\item Neutrino Physics Center (NPC) award of \$10,000 to work with Stephen Parke at Fermilab, awarded December 2018.
+\item Neutrino Theory Network (NTN) award of \$14,000 to work with Irina Mocioiu at PSU, awarded June 2018.
 \item The Giorgio Salvini diploma from the Erice International School of Subnuclear Physics, awarded June 2016.
 \item PITT PACC travel award of \$300 to attend Pheno '16, awarded April 2016.
 \item Vanderbilt Dissertation Enhancement Grant of \$2,000 to attend the Theoretical Advanced Study Institute: Amplitudes For Colliders
@@ -107,6 +108,7 @@ in June 2014, awarded April 2014.
 \begin{itemize}
 \item Erice International School of Subnuclear Physics in Sicily (ISSP), June 2016.
 \item Theoretical Advanced Study Institute in Elementary Particle Physics (TASI), Boulder CO, June 2014.
+\item Introduction to accelerator physics, United States Particle Accelerator School, June 2009.
 \end{itemize}
 
 \subsection*{Software}
@@ -117,8 +119,8 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 
 \subsection*{Service}
 \begin{itemize}
-\item BNL HET Lunch Discussion chair, 2019--Present.
 \item Reviewer for JHEP, PRD, Physics Letters B, and Nuclear Physics B.
+\item BNL HET Lunch Discussion chair, 2019--Present.
 \item NBIA Astroparticle journal club co-chair, 2017--2018.
 \end{itemize}
 
