--- a/CV.tex
+++ b/CV.tex
@@ -119,6 +119,7 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 
 \subsection*{Service}
 \begin{itemize}
+\item Convener for Brookhaven Forum 2019 and DPF 2019.
 \item Reviewer for JHEP, PRD, Physics Letters B, and Nuclear Physics B.
 \item BNL HET Lunch Discussion chair, 2019--Present.
 \item NBIA Astroparticle journal club co-chair, 2017--2018.
