added neutrino 2020 iac

--- a/CV.tex
+++ b/CV.tex
@@ -119,6 +119,7 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 
 \subsection*{Service}
 \begin{itemize}
+\item International Organizing Committee for Neutrino 2020.
 \item Convener for Brookhaven Forum 2019 and DPF 2019.
 \item Reviewer for JHEP, PRD, Physics Letters B, European Physical Journal C, and Nuclear Physics B.
 \item BNL HET Lunch Discussion chair, 2019--Present.
@@ -130,7 +131,7 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 \item Interacted with high school students via APS's \emph{Adopt-A-Physicist} program, 2018 Fall semester.
 \end{itemize}
 
-\subsection*{Students}
+\subsection*{Students Advised/Mentored}
 \begin{itemize}
 \item Klaes M\o ller, University of Copenhagen, master's thesis: \emph{Constraining Astrophysical Parameters with Neutrinos}, 2017--2018.
 \item Anna Suliga, University of Copenhagen, master's thesis: \emph{Diffuse supernova neutrino background}, 2017--2018.
