--- a/CV.tex
+++ b/CV.tex
@@ -121,7 +121,9 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 \begin{itemize}
 \item International Organizing Committee for Neutrino 2020.
 \item Convener for Brookhaven Forum 2019 and DPF 2019.
-\item Reviewer for JHEP, PRD, Physics Letters B, European Physical Journal C, and Nuclear Physics B.
+\item Judge for the 12th International Neutrino Summer School at Fermilab 2019. 
+\item Chair for Pheno 2019.
+\item Reviewer for JHEP, PRD, Physics Letters B, European Physical Journal C, Nuclear Physics B, and MNRAS.
 \item BNL HET Lunch Discussion chair, 2019--Present.
 \item NBIA Astroparticle journal club co-chair, 2017--2018.
 \end{itemize}
