--- a/CV.tex
+++ b/CV.tex
@@ -123,8 +123,9 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 \item Convener for Brookhaven Forum 2019 and DPF 2019.
 \item Judge for the 12th International Neutrino Summer School at Fermilab 2019. 
 \item Chair for Pheno 2019.
-\item Reviewer for JHEP, PRD, Physics Letters B, European Physical Journal C, Nuclear Physics B, and MNRAS.
-\item BNL HET Lunch Discussion chair, 2019--Present.
+\item Reviewer for PRL, JHEP, PRD, Physics Letters B, European Physical Journal C, Nuclear Physics B, MNRAS, and Universe.
+\item BNL HET seminar organizer, 2019--Present.
+\item BNL HET lunch discussion organizer, 2019--Present.
 \item NBIA Astroparticle journal club co-chair, 2017--2018.
 \end{itemize}
 
