--- a/CV.tex
+++ b/CV.tex
@@ -90,13 +90,12 @@ Email: & \href{mailto:peterbd1@gmail.com}{\tt peterbd1@gmail.com} & Upton, NY 11
 \item Neutrino Physics Center (NPC) award of \$10,000 to work with Stephen Parke at Fermilab, awarded December 2018.
 \item Neutrino Theory Network (NTN) award of \$14,000 to work with Irina Mocioiu at PSU, awarded June 2018.
 \item The Giorgio Salvini diploma from the Erice International School of Subnuclear Physics, awarded June 2016.
-\item PITT PACC travel award of \$300 to attend Pheno '16, awarded April 2016.
-\item Vanderbilt Dissertation Enhancement Grant of \$2,000 to attend the Theoretical Advanced Study Institute: Amplitudes For Colliders
-in June 2014, awarded April 2014.
+\item PITT PACC travel award to attend Pheno '16, awarded April 2016.
+\item Vanderbilt Dissertation Enhancement Grant of \$2,000 to attend the Theoretical Advanced Study Institute, awarded April 2014.
 \item Subsidy of \$1,600 to attend the Theoretical Advanced Study Institute: Amplitudes For Colliders in June 2014, awarded April 2014.
-\item Division of Particles \& Fields travel grant of \$120 to the APS April 2013 meeting, awarded March 2013.
+\item Division of Particles \& Fields travel grant to the APS April 2013 meeting, awarded March 2013.
 \item The Robert T.~Lagemann Award of \$1,000 for highest academic achievement by a first-year graduate student, awarded April 2011.
-\item McMinn Fellowship of \$5,000 a year for five years, awarded March 2010.
+\item McMinn Fellowship of \$25,000 over five years, awarded March 2010.
 \end{itemize}
 
 \subsection*{Collaborations}
