--- a/CV.tex
+++ b/CV.tex
@@ -118,6 +118,7 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 
 \subsection*{Service}
 \begin{itemize}
+\item Snowmass neutrino oscillations subtopic convener 2020--2021.
 \item International Organizing Committee for Neutrino 2020.
 \item Convener for Brookhaven Forum 2019 and DPF 2019.
 \item Judge for the 12th International Neutrino Summer School at Fermilab 2019. 
