--- a/CV.tex
+++ b/CV.tex
@@ -122,8 +122,8 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 \item International Organizing Committee for Neutrino 2020.
 \item Convener for Brookhaven Forum 2019 and DPF 2019.
 \item Judge for the 12th International Neutrino Summer School at Fermilab 2019. 
-\item Chair for Pheno 2019.
-\item Reviewer for PRL, JHEP, PRD, Physics Letters B, European Physical Journal C, Nuclear Physics B, MNRAS, and Universe.
+\item Chair for Pheno 2019, 2020.
+\item Reviewer for Physical Review Letters, Journal of High Energy Physics, Physical Review D, Physics Letters B, European Physical Journal C, Journal of Mathematical Physics, Nuclear Physics B, Monthly Notices of the Royal Astronomical Society, and Universe.
 \item BNL HET seminar organizer, 2019--Present.
 \item BNL HET lunch discussion organizer, 2019--Present.
 \item NBIA Astroparticle journal club co-chair, 2017--2018.
