--- a/CV.tex
+++ b/CV.tex
@@ -124,6 +124,7 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 \item Judge for the 12th International Neutrino Summer School at Fermilab 2019. 
 \item Chair for Pheno 2019, 2020.
 \item Reviewer for Physical Review Letters, Journal of High Energy Physics, Physical Review D, Physics Letters B, European Physical Journal C, Journal of Mathematical Physics, Nuclear Physics B, Monthly Notices of the Royal Astronomical Society, and Universe.
+\item Brookhaven Neutrino Theory Virtual Seminar creator/organizer, 2020--Present.
 \item BNL HET seminar organizer, 2019--Present.
 \item BNL HET lunch discussion organizer, 2019--Present.
 \item NBIA Astroparticle journal club co-chair, 2017--2018.
@@ -131,7 +132,8 @@ c++, mpi, openmp, python, matplotlib, \LaTeX, beamer, GLoBES, pythia, ROOT, MATH
 
 \subsection*{Outreach}
 \begin{itemize}
-\item Interacted with high school students via APS's \emph{Adopt-A-Physicist} program, 2018 Fall semester.
+\item Interact with grade-school students via APS's \emph{Adopt-A-Physicist}, Skype-A-Scientist, $\dots$ programs, 2018--Present.
+\item Brookhaven Women In Science (BWIS) member, 2020--Present.
 \end{itemize}
 
 \subsection*{Students Advised/Mentored}
